--- a/index.html
+++ b/index.html
@@ -6,29 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Landing Page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,800;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Header -->
     <div class="header">
+        <div class="content-header">
 
-        <!-- Menu -->
-        <div class="menu">
-            <div class="header-logo">Header Logo</div>
-            <div class="menu-links">
-                <ul>
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
-                </ul>
+            <!-- Menu -->
+            <div class="menu">
+                <div class="header-logo">Header Logo</div>
+                    <ul class="menu-links">
+                        <li><a href="#">header link one</a></li>
+                        <li><a href="#">header link two</a></li>
+                        <li><a href="#">header link three</a></li>
+                    </ul>
             </div>
-        </div>
 
-        <!-- Hero -->
-        <div class="hero-main">
-            <h1>This website is awesome</h1>
-        </div>
-        <div class="hero-second">
-            <p>This website is an illustration of an exercise from @The_Odin_Project</p>
+            <!-- Hero -->
+            <div class="hero">
+                <div class="hero-left">
+                    <span class="hero-main">
+                        This website is awesome
+                    </span>
+                    <span class="hero-second">
+                        <br>This website is an illustration of an exercise from @The_Odin_Project.
+                        <br> From its medieval origins to the digital era, learn everything there is to know about the ubiquitous lorem ipsum passage.
+                    </span>
+                    <p><button id="button-header"><a href="#">Sign Up</a></button></p>
+                </div>
+                <div class="hero-right">
+                    <img src="/First_LandingPage/images/yellowbottle.jpg" alt="yellow plastic" />
+                </div>
+            </div>
+
         </div>
     </div>
 
