making frist rectangle

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <p><button id="button-header"><a href="#">Sign Up</a></button></p>
                 </div>
                 <div class="hero-right">
-                    <img src="/First_LandingPage/images/yellowbottle.jpg" alt="yellow plastic" />
+                    <img src="/images/yellowbottle.jpg" alt="yellow plastic" />
                 </div>
             </div>
 
@@ -47,22 +47,44 @@
 
     <!-- First rectangle -->
     <div class="content1">
-
+        <p>Some random information.</p>
+        <div class="four-squares">
+            <div class="square-content">
+                <div class="square"></div>
+                <div class="square-text">this is some subtext under an illustration or an image</div>
+            </div>
+            <div class="square-content">
+                <div class="square"></div>
+                <div class="square-text">this is some subtext under an illustration or an image</div>
+            </div>
+            <div class="square-content">
+                <div class="square"></div>
+                <div class="square-text">this is some subtext under an illustration or an image</div>
+            </div>
+            <div class="square-content">
+                <div class="square"></div>
+                <div class="square-text">this is some subtext under an illustration or an image</div>
+            </div>
+        </div>
     </div>
 
     <!-- 2nd rectangle -->
     <div class="content2">
-
+        <div class="quote">This is an inspriring quote, or a testimonial from a customer. Maybe it's just filling up dpace, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="quote-author">-Thor, God of Thunder</div>
     </div>
 
     <!-- 3rd rectangle -->
     <div class="content3">
-
+        <div class="blue-rectangle">
+            <div class="blue-left"></div>
+            <div class="blue-right"></div>
+        </div>
     </div>
 
     <!-- Footer -->
-    <footer>
-
+    <footer id="footer">
+        <div class="copyright">Copyright © The Odin Project 2021</div>
     </footer>
 
 </body>
