finishing things up

--- a/index.html
+++ b/index.html
@@ -47,38 +47,45 @@
 
     <!-- First rectangle -->
     <div class="content1">
-        <p>Some random information.</p>
-        <div class="four-squares">
-            <div class="square-content">
-                <div class="square"></div>
-                <div class="square-text">this is some subtext under an illustration or an image</div>
-            </div>
-            <div class="square-content">
-                <div class="square"></div>
-                <div class="square-text">this is some subtext under an illustration or an image</div>
-            </div>
-            <div class="square-content">
-                <div class="square"></div>
-                <div class="square-text">this is some subtext under an illustration or an image</div>
-            </div>
-            <div class="square-content">
-                <div class="square"></div>
-                <div class="square-text">this is some subtext under an illustration or an image</div>
+        <div class="content1-block">
+            <p>Some random information.</p>
+            <div class="four-squares">
+                <div class="square-content">
+                    <div class="square"></div>
+                    <div class="square-text">this is some subtext under an illustration or an image</div>
+                </div>
+                <div class="square-content">
+                    <div class="square"></div>
+                    <div class="square-text">this is some subtext under an illustration or an image</div>
+                </div>
+                <div class="square-content">
+                    <div class="square"></div>
+                    <div class="square-text">this is some subtext under an illustration or an image</div>
+                </div>
+                <div class="square-content">
+                    <div class="square"></div>
+                    <div class="square-text">this is some subtext under an illustration or an image</div>
+                </div>
             </div>
         </div>
     </div>
 
     <!-- 2nd rectangle -->
     <div class="content2">
-        <div class="quote">This is an inspriring quote, or a testimonial from a customer. Maybe it's just filling up dpace, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-        <div class="quote-author">-Thor, God of Thunder</div>
+        <div class="quote-content">
+            <div class="quote">This is an inspriring quote, or a testimonial from a customer. Maybe it's just filling up dpace, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quote-author">-Thor, God of Thunder</div>
+        </div>
     </div>
 
     <!-- 3rd rectangle -->
     <div class="content3">
         <div class="blue-rectangle">
-            <div class="blue-left"></div>
-            <div class="blue-right"></div>
+            <div class="blue-left">
+                <span class="blue-bold-text">Call to action! It's time!</span>
+                    <br>SIgn up for our product by clicking that button right over there!
+            </div>
+            <div class="blue-right"><button><a href="#">Sign Up</a></button></div>
         </div>
     </div>
 
