changing pic path

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <p><button id="button-header"><a href="#">Sign Up</a></button></p>
                 </div>
                 <div class="hero-right">
-                    <img src="/images/yellowbottle.jpg" alt="yellow plastic" />
+                    <img src="https://raw.githubusercontent.com/Mugzzz/First_LandingPage/main/images/yellowbottle.jpg" alt="yellow plastic" />
                 </div>
             </div>
 
